# fullstack16

./: Backend-Django.md  DRF.md  Hosting.md  README.md  django-hosting.md  leetcode_122.js  poetry.md  pyproject.toml
MD/: useContext.md
backend/: db.sqlite3
backend/backend/: settings.py  urls.py
backend/static/styles/: main.css  resets.css
backend/templates/: 404.html  about.html  base.html  create_todo.html  delete_todo.html  form_snippets.html  home.html  navbar.html  profile.html  todo_details.html  update_profile.html  update_todo.html
backend/todos/: admin.py  api_views.py  forms.py  middleware.py  models.py  serializers.py  views.py
backend/todos/migrations/: 0001_initial.py  0002_todos_completed.py
backend/users/: api_views.py  forms.py  models.py  serializers.py  views.py
backend/users/migrations/: 0001_initial.py
frontend/: README.md  db.json  index.html  package-lock.json  package.json  playwright.config.js
frontend/public/: manifest.json
frontend/src/: App.jsx  index.scss  main.jsx
frontend/src/components/: AllComponents.jsx  Bemiyya.jsx  Test.jsx  test.scss
frontend/src/db/: featured_products.json  latest_products.json  phones.json  products.json  shopex_offers.json  trending_items.json
frontend/src/locale/: en.json  ru.json  uz.json
frontend/src/reduxStore/: index.js  slice.jsx
frontend/src/store/: helpers.js  i18n.js  index.js
frontend/tests/: example.spec.js
frontend/tests-examples/: demo-todo-app.spec.js
shopex/: db.sqlite3  manage.py
shopex/shopex/: asgi.py  settings.py  urls.py  wsgi.py
(+53 files in other folders)
